# the-raytracers

./: .gitattributes  .gitignore  README.md
c/: camera.h  hitrecord.c  hitrecord.h  image.c  image.h  main.c  makefile  material.c  material.h  ray3.c  ray3.h  raytracer.c  readme.md  scene.c  scene.h  surface.c  surface.h  vec3.c  vec3.h  vector3d.c  vector3d.h
go/: go.mod  main.go  ray3.go  scene.go  surface.go  vec3.go
java/: .project  makefile  readme.md  render.xml
java/src/raytracer/: Camera.java  HitRecord.java  Lambertian.java  Material.java  Metal.java  Ray3.java  Raytracer.java  Scene.java  Sphere.java  Surface.java  Vec3.java
java/src/test/: Ray3Test.java  SphereTest.java  SurfaceTest.java  TestSphere.java  Vec3Test.java
python/: camera.py  hit_record.py  ray3.py  raytracer.py  scene.py  surface.py  vec3.py
rust/: Cargo.toml
rust/src/: main.rs  ray3.rs  scene.rs  surface.rs
scenes/: box.txt  three_spheres.txt
