[package]
name = "raytracer"
version = "0.1.0"
authors = ["Nick Silvestri <nickpsilvestri@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array2d = "0.2.1"
geefr-ppm = "0.2.0"
rand = "0.7.3"
vek = "0.11.2"